升级JAVA17，优化代码